testsuite/tests/properties/invalid_lambda_arg_type/all_index/test.lkt
from common import BaseExampleBlock, Example, FooNode, IndexedItem

class ExampleBlock: BaseExampleBlock {
    @exported fun p(): Array[IndexedItem] =
        node.items.iall((e: Example, i: Bool) => e.is_null or i == 0)
}
